# UTModLoader

./: .gitignore  CMakeLists.txt  README.md  config.h.in  format.h  macros.h  main.cpp  modfile.h  util.h
.github/workflows/: build.yml
commands/: extract.cpp  extract.h
formats/: rar.cpp  rar.h  umod.cpp  umod.h  zip.cpp  zip.h
src/: ModData.cpp  ModData.h  README.md  main.cpp  modfile.h  util.h
src/commands/: extract.cpp  extract.h
src/config/: config.h.in
src/formats/: rar.cpp  rar.h  umod.cpp  umod.h  zip.cpp  zip.h
src/util/: container.h  error.h  str.h
